# eventbus-python

./: .gitignore  README.md  pyproject.toml
src/eventbus/: event_bus.py  example.py
